--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
