--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -39,7 +39,7 @@ jobs:
           context: .
           build-args: NODE_VERSION=fermium-alpine
           push: true
-          tags: ghcr.io/andreas-fahrecker/nodepnpm:fermium-alpine
+          tags: andreasfahrecker/node-pnpm:fermium-alpine,ghcr.io/andreas-fahrecker/nodepnpm:fermium-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -49,7 +49,7 @@ jobs:
           context: .
           build-args: NODE_VERSION=gallium-alpine
           push: true
-          tags: ghcr.io/andreas-fahrecker/nodepnpm:gallium-alpine
+          tags: andreasfahrecker/node-pnpm:gallium-alpine,ghcr.io/andreas-fahrecker/nodepnpm:gallium-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -59,6 +59,6 @@ jobs:
           context: .
           build-args: NODE_VERSION=hydrogen-alpine
           push: true
-          tags: ghcr.io/andreas-fahrecker/nodepnpm:latest,ghcr.io/andreas-fahrecker/nodepnpm:hydrogen-alpine
+          tags: andreasfahrecker/node-pnpm:latest,andreasfahrecker/node-pnpm:hydrogen-alpine,ghcr.io/andreas-fahrecker/nodepnpm:latest,ghcr.io/andreas-fahrecker/nodepnpm:hydrogen-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
