--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -4,7 +4,6 @@ on: workflow_dispatch
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build-and-push-images:
@@ -26,7 +25,7 @@ jobs:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -39,7 +38,7 @@ jobs:
           context: .
           build-args: NODE_VERSION=fermium-alpine
           push: true
-          tags: andreasfahrecker/node-pnpm:fermium-alpine,ghcr.io/andreas-fahrecker/nodepnpm:fermium-alpine
+          tags: andreasfahrecker/node-pnpm:fermium-alpine,ghcr.io/andreas-fahrecker/node-pnpm:fermium-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -49,7 +48,7 @@ jobs:
           context: .
           build-args: NODE_VERSION=gallium-alpine
           push: true
-          tags: andreasfahrecker/node-pnpm:gallium-alpine,ghcr.io/andreas-fahrecker/nodepnpm:gallium-alpine
+          tags: andreasfahrecker/node-pnpm:gallium-alpine,ghcr.io/andreas-fahrecker/node-pnpm:gallium-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -59,6 +58,6 @@ jobs:
           context: .
           build-args: NODE_VERSION=hydrogen-alpine
           push: true
-          tags: andreasfahrecker/node-pnpm:latest,andreasfahrecker/node-pnpm:hydrogen-alpine,ghcr.io/andreas-fahrecker/nodepnpm:latest,ghcr.io/andreas-fahrecker/nodepnpm:hydrogen-alpine
+          tags: andreasfahrecker/node-pnpm:latest,andreasfahrecker/node-pnpm:hydrogen-alpine,ghcr.io/andreas-fahrecker/node-pnpm:latest,ghcr.io/andreas-fahrecker/node-pnpm:hydrogen-alpine
           cache-from: type=gha
           cache-to: type=gha,mode=max
