--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -6,33 +6,19 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  build-and-push-images:
+  build-and-push-fermium-image:
+    name: "Build and Push Fermium"
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build and push Docker image fermium-alpine
+      -
+        name: Setup
+        uses: ./.github/actions/setup
+      -
+        name: Build and push Docker image fermium-alpine
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -42,7 +28,19 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build and push Docker image gallium-alpine
+  build-and-push-gallium-image:
+    name: "Build and Push Gallium"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      -
+        name: Setup
+        uses: ./.github/actions/setup
+      -
+        name: Build and push Docker image gallium-alpine
         uses: docker/build-push-action@v3
         with:
           context: .
@@ -52,7 +50,19 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Build and push Docker image hydrogen-alpine
+  build-and-push-hydrogen-image:
+    name: "Build and Push Hydrogen"
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    
+    steps:
+      -
+        name: Setup
+        uses: ./.github/actions/setup
+      -
+        name: Build and push Docker image hydrogen-alpine
         uses: docker/build-push-action@v3
         with:
           context: .
