--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -14,8 +14,21 @@ jobs:
         name: Checkout repository
         uses: actions/checkout@v3
       -
-        name: Setup
-        uses: ./.github/actions/setup
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ inputs.DOCKER_USERNAME }}
+          password: ${{ inputs.DOCKER_PASSWORD }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ inputs.GITHUB_TOKEN }}
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
   build-and-push-fermium-image:
     name: "Build and Push Fermium"
