--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -6,9 +6,16 @@ env:
   REGISTRY: ghcr.io
 
 jobs:
-  setup:
-    name: "Checkout and Login to Docker Registries"
+  build-and-push-old-images:
+    name: "Build and Push Fermium"
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: [fermium-alpine, gallium-alpine]
+    permissions:
+      contents: read
+      packages: write
+    
     steps:
       -
         name: Checkout repository
@@ -26,62 +33,44 @@ jobs:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-  build-and-push-fermium-image:
-    name: "Build and Push Fermium"
-    runs-on: ubuntu-latest
-    needs: setup
-    permissions:
-      contents: read
-      packages: write
-    
-    steps:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       -
-        name: Build and push Docker image fermium-alpine
+        name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
           context: .
-          build-args: NODE_VERSION=fermium-alpine
+          build-args: NODE_VERSION=${{ matrix.node_version }}
           push: true
-          tags: andreasfahrecker/node-pnpm:fermium-alpine,ghcr.io/andreas-fahrecker/node-pnpm:fermium-alpine
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  build-and-push-gallium-image:
-    name: "Build and Push Gallium"
-    runs-on: ubuntu-latest
-    needs: setup
-    permissions:
-      contents: read
-      packages: write
-    
-    steps:
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Build and push Docker image gallium-alpine
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          build-args: NODE_VERSION=gallium-alpine
-          push: true
-          tags: andreasfahrecker/node-pnpm:gallium-alpine,ghcr.io/andreas-fahrecker/node-pnpm:gallium-alpine
+          tags: andreasfahrecker/node-pnpm:${{ matrix.node_version }},ghcr.io/andreas-fahrecker/node-pnpm:${{ matrix.node_version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   build-and-push-hydrogen-image:
     name: "Build and Push Hydrogen"
     runs-on: ubuntu-latest
-    needs: setup
     permissions:
       contents: read
       packages: write
     
     steps:
+      -
+        name: Checkout repository
+        uses: actions/checkout@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
