--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -21,6 +21,14 @@ jobs:
         name: Checkout repository
         uses: actions/checkout@v3
       -
+        name: Login to Docker Registries
+        uses: ./.github/actions/docker-registry-setup
+        with:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          GHCR_USERNAME: ${{ github.actor }}
+          GHCR_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
