--- a/.github/workflows/publish_ghcr.yml
+++ b/.github/workflows/publish_ghcr.yml
@@ -67,18 +67,13 @@ jobs:
         name: Checkout repository
         uses: actions/checkout@v3
       -
-        name: Login to Docker Hub
-        uses: docker/login-action@v2
+        name: Login to Docker Registries
+        uses: ./.github/actions/docker-registry-setup
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          GHCR_USERNAME: ${{ github.actor }}
+          GHCR_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
